tests/paczka1/fuzzy1/61678462.err
Error in line 3: eDCD3O A616 61,3
Error in line 7: 6gZb7 A31 60,3
Error in line 13: 6gZb7 A31 48,1
Error in line 19: 6gZb7 A616 92,4
Error in line 25: 6gZb7 S108 91,2
Error in line 28: 6an1sl A457 99,5
Error in line 17: A616 A616 88,5
Error in line 27: 0pH75tdfIn A457 87,7
